<resources>
    <string name="app_name">Amiibos</string>

    <string name="no_amiibos_loaded">We can\'t load our Amiibos right now - please try again later!</string>

    <!-- Amiibo details -->
    <string name="detail_character">Character: %s</string>
    <string name="detail_amiibo_series">Amiibo Series: %s</string>
    <string name="detail_game_series">Game Series: %s</string>
    <string name="detail_type">Type: %s</string>
    <string name="detail_releases">Releases:</string>

    <!-- Releases -->
    <string name="australia">Australia</string>
    <string name="europe">Europe</string>
    <string name="japan">Japan</string>
    <string name="north_america">North America</string>
    <string name="not_applicable">N/A</string>

    <!-- Detail buttons -->
    <string name="purchase">Purchase</string>
    <string name="purchased">Purchased</string>
    <string name="remove">Remove</string>

    <!-- Purchasing -->
    <string name="purchase_amiibo">Purchased %s!</string>
    <string name="unpurchase_amiibo">Canceled purchase of %s.</string>

    <!-- Cancel purchase dialog -->
    <string name="cancel_purchase">Cancel Purchase</string>
    <string name="cancel_purchase_message">Are you sure you want to cancel your purchase?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- Remove Amiibo -->
    <string name="remove_amiibo">Remove %s</string>
    <string name="remove_amiibo_message">Are you sure you want to remove %s from your store?</string>
    <string name="cancel">Cancel</string>
    <string name="remove_amiibo_snackbar">Removed %s from your store.</string>

    <!-- Filters -->
    <string name="filter">Filter:</string>
    <string name="all">All</string>
    <string name="custom">Custom</string>

    <!-- Custom Amiibo -->
    <string name="custom_title">Add your own Amiibo!</string>
    <string name="name">Name:</string>
    <string name="character">Character:</string>
    <string name="amiibo_series">Amiibo Series:</string>
    <string name="game_series">Game Series:</string>
    <string name="type">Type:</string>
    <string name="add">Add</string>
    <string name="added_message">Added %s to your store!</string>

    <!-- Content descriptors -->
    <string name="add_amiibo_fab_description">Adds a custom Amiibo with a user selected image.</string>
    <string name="amiibo_detail_image_description">Full scale Amiibo image.</string>
    <string name="custom_image_description">Image for custom Amiibo.</string>
    <string name="custom_close_description">Close button for custom Amiibo window.</string>

</resources>