<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/release_table_margins"
        android:layout_marginEnd="@dimen/release_table_margins"
        android:padding="5dp"
        android:background="@color/lightGray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DetailRelease"
                android:text="@string/australia" />

            <TextView
                android:id="@+id/auDate"
                style="@style/DetailRelease" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DetailRelease"
                android:text="@string/europe" />

            <TextView
                android:id="@+id/euDate"
                style="@style/DetailRelease" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DetailRelease"
                android:text="@string/japan" />

            <TextView
                android:id="@+id/jpDate"
                style="@style/DetailRelease" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DetailRelease"
                android:text="@string/north_america" />

            <TextView
                android:id="@+id/naDate"
                style="@style/DetailRelease" />

        </LinearLayout>

    </LinearLayout>

<!--    <View-->
<!--        android:layout_width="1dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:layout_marginBottom="5dp"-->
<!--        android:background="@color/black" />-->

</RelativeLayout>